logs/validate.20260329-165951.log
error: expected `,`
   --> src/Chap52/AdjTableGraphStEph.rs:617:64
    |
617 | ...                   (self.adj@.dom().contains(seq@[j]) implies !self.adj@[seq@[j]].contains(v@))
    |                                                          ^^^^^^^

error: expected `,`
   --> src/Chap52/AdjTableGraphStPer.rs:575:66
    |
575 | ...                   (result_adj@.dom().contains(seq@[j]) implies !result_adj@[seq@[j]].contains(v@))
    |                                                            ^^^^^^^

error[E0432]: unresolved imports `crate::Chap52::AdjTableGraphStEph::AdjTableGraphStEph::spec_sum_adj_sizes`, `crate::Chap52::AdjTableGraphStEph::AdjTableGraphStEph::spec_sum_entry_sizes`, `crate::Chap52::AdjTableGraphStEph::AdjTableGraphStEph::lemma_sum_adj_remove`, `crate::Chap52::AdjTableGraphStEph::AdjTableGraphStEph::lemma_sum_entry_sizes_monotone`
  --> src/Chap52/AdjTableGraphStPer.rs:17:9
   |
17 |         spec_sum_adj_sizes, spec_sum_entry_sizes,
   |         ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^ no `spec_sum_entry_sizes` in `Chap52::AdjTableGraphStEph::AdjTableGraphStEph`
   |         |
   |         no `spec_sum_adj_sizes` in `Chap52::AdjTableGraphStEph::AdjTableGraphStEph`
18 |         lemma_sum_adj_remove, lemma_sum_entry_sizes_monotone,
   |         ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `lemma_sum_entry_sizes_monotone` in `Chap52::AdjTableGraphStEph::AdjTableGraphStEph`
   |         |
   |         no `lemma_sum_adj_remove` in `Chap52::AdjTableGraphStEph::AdjTableGraphStEph`

error[E0425]: cannot find type `AdjTableGraphStPer` in this scope
   --> src/Chap52/AdjTableGraphStPer.rs:809:42
    |
809 |     impl<V: StT + Ord + Clone> Clone for AdjTableGraphStPer<V> {
    |                                          ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `AdjTableGraphStPer` in this scope
   --> src/Chap52/AdjTableGraphStPer.rs:811:13
    |
811 |             AdjTableGraphStPer { adj: self.adj.clone() }
    |             ^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0422, E0425, E0432.
For more information about an error, try `rustc --explain E0422`.
Elapsed: 5s
Sampled Memory Usage: peak rust_verify RSS: 301MB, peak z3 RSS: 0MB, min free: 22477MB
Sampled CPU Usage: rust_verify: 4s, z3 children: 0s
